# ml-intern

./: .gitignore  README.md  pyproject.toml
agent/: config.py  main.py
agent/context_manager/: manager.py
agent/core/: agent_loop.py  session.py  tools.py
agent/prompts/: system_prompt_v3.yaml
agent/tools/: dataset_tools.py  papers_tool.py  sandbox_client.py
backend/: dependencies.py  session_manager.py
backend/routes/: agent.py  auth.py
configs/: main_agent_config.json
frontend/src/components/: SessionChat.tsx
frontend/src/components/Chat/: ActivityStatusBar.tsx  ChatInput.tsx
frontend/src/components/WelcomeScreen/: WelcomeScreen.tsx
tests/integration/tools/: test_papers_integration.py
