[project]
name = "hf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    # Core dependencies (always required)
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
# Agent runtime dependencies
agent = [
    "requests>=2.32.5",
    "litellm>=1.0.0",
    "huggingface-hub>=1.0.1",
    "fastmcp>=2.4.0",
    "lmnr>=0.7.23",  # Note: Using base package to avoid torch/transformers from [all] extra
    "prompt-toolkit>=3.0.0",
    "thefuzz>=0.22.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "datasets>=4.3.0",  # For session logging to HF datasets
]

# Evaluation/benchmarking dependencies
eval = [
    "inspect-ai>=0.3.149",
    "pandas>=2.3.3",
    "datasets>=4.3.0",
    "tenacity>=8.0.0",
]

# Development and testing dependencies
dev = [
    "pytest>=9.0.2",
]

# All dependencies (agent + eval + dev)
all = [
    "hf-agent[agent,eval,dev]",
]
